--- a/index.html
+++ b/index.html
@@ -1,15 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>chocolate-pizza</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<header></header>
-<main></main>
-<footer></footer>
+    <header>
+        <nav>
+            <div>
+                <img id='logo' src="image/logo.png" alt="theLogo">
+            </div>
+                <div id="h">
+                    <h1>Delicious</h1>
+                    <h3>The Best Food Blog On THe Web</h3>
+                </div>
+            
+            <div id='links'>
+                <img src="image/fb-icon.png" alt="fb">
+                <img src="image/twit-icon.png" alt="twit">
+                <img src="image/gp-icon.png" alt="gp">
+                <img src="image/insta-icon.png" alt="insta">
+                <img src="image/flic-icon.png" alt="flic">
+                <img src="image/pint-icon.png" alt="pint">
+                <img src="image/hr-img.png" alt="hr">
+                <img src="image/rss-icon.png" alt="rss">
+                <img src="image/mail-icon.png" alt="mail">
+            </div>
+        </nav>
+
+    </header>
+    <main></main>
+    <footer></footer>
 
 </body>
+
 </html>
