add by both of us

--- a/index.html
+++ b/index.html
@@ -10,32 +10,129 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div>
-                <img id='logo' src="image/logo.png" alt="theLogo">
-            </div>
+    <section id="head">
+        <header>
+            <nav>
+                <div>
+                    <img id='logo' src="image/logo.png" alt="theLogo">
+                </div>
                 <div id="h">
                     <h1>Delicious</h1>
-                    <h3>The Best Food Blog On THe Web</h3>
+                    <h4>The Best Food Blog On THe Web</h4>
                 </div>
-            
-            <div id='links'>
-                <img src="image/fb-icon.png" alt="fb">
-                <img src="image/twit-icon.png" alt="twit">
-                <img src="image/gp-icon.png" alt="gp">
-                <img src="image/insta-icon.png" alt="insta">
-                <img src="image/flic-icon.png" alt="flic">
-                <img src="image/pint-icon.png" alt="pint">
-                <img src="image/hr-img.png" alt="hr">
-                <img src="image/rss-icon.png" alt="rss">
-                <img src="image/mail-icon.png" alt="mail">
-            </div>
-        </nav>
 
-    </header>
-    <main></main>
-    <footer></footer>
+                <div id='links'>
+                    <a href="#">
+                        <img src="image/fb-icon.png" alt="fb">
+
+                    </a>
+                    <a href="#">
+                        <img src="image/twit-icon.png" alt="twit">
+
+                    </a>
+                    <a href="#">
+                        <img src="image/gp-icon.png" alt="gp">
+
+                    </a>
+                    <a href="#">
+                        <img src="image/insta-icon.png" alt="insta">
+
+                    </a>
+                    <a href="#">
+                        <img src="image/flic-icon.png" alt="flic">
+
+                    </a>
+                    <a href="#">
+                        <img src="image/pint-icon.png" alt="pint">
+
+                    </a>
+                    <a href="#">
+                        <img src="image/hr-img.png" alt="hr">
+
+                    </a>
+                    <a href="#">
+                        <img src="image/rss-icon.png" alt="rss">
+
+                    </a>
+                    <a href="#">
+                        <img src="image/mail-icon.png" alt="mail">
+
+                    </a>
+
+                </div>
+            </nav>
+
+        </header>
+    </section>
+    <main>
+        <section id="body">
+            <div>
+                <h1> Chocolate pizza</h1>
+                <h4>POSTED on 15 Dec 2013/ Desserts</h4>
+                <button><img src="image/print-icon.png" alt="print"></button>
+            </div>
+            <a> <img src="image/choco-pizza.png" alt="choco-pizza"></a>
+            <article>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed saepe necessitatibus, aut porro
+                    suscipit eum aliquid reprehenderit aspernatur voluptatem, numquam optio? Nesciunt veritatis
+                    repellendus ipsum alias expedita optio earum tempora.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, voluptate! Et tenetur odit
+                    voluptatum accusamus dolorem, eveniet obcaecati! Nisi odio eaque distinctio illo maxime doloribus
+                    consequatur magnam, cum consequuntur iste.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi perferendis ab dolore magnam odit eum,
+                    et non neque quos labore temporibus accusamus laborum earum tenetur. Consequatur recusandae
+                    dignissimos cumque voluptatem.</p>
+            </article>
+        </section>
+        <section id="ingredeant">
+            <Section id="right">
+
+                <form action="/action_page.php">
+                    <input type="checkbox" name="vehicle1">
+                    <label for="vehicle1">1 1/2 cups of milk</label><br>
+                    <input type="checkbox" name="vehicle2">
+                    <label for="vehicle2"> 1/2 cup mascarpone</label><br>
+                    <input type="checkbox" name="vehicle3">
+                    <label for="vehicle3">1/2 tsp pink salt</label><br>
+                    <input type="checkbox" name="vehicle3">
+                    <label for="vehicle3">1 lb black mission figs</label><br>
+                    <input type="checkbox" name="vehicle3">
+                    <label for="vehicle3">1/2 cup brown suger</label><br>
+                    <input type="checkbox" name="vehicle3">
+                    <label for="vehicle3">2-4 tbsp water</label><br>
+                </form>
+            </Section>
+            <Section id="left">
+                <form action="/action_page.php">
+                    <input type="checkbox" name="vehicle1">
+                    <label for="vehicle1"> </label><br>
+                    <input type="checkbox" name="vehicle2">
+                    <label for="vehicle2"> </label><br>
+                    <input type="checkbox" name="vehicle3">
+                    <label for="vehicle3"> </label><br>
+                    <input type="checkbox" name="vehicle3">
+                    <label for="vehicle3"> </label><br>
+                    <input type="checkbox" name="vehicle3">
+                    <label for="vehicle3"> </label><br>
+                    <input type="checkbox" name="vehicle3">
+                    <label for="vehicle3"> </label><br>
+                </form>
+            </Section>
+
+        </section>
+        <section id="owner">
+            <a> <img src="image/van-pic.png" alt="van-pic"></a>
+            <nav>
+                <h3>vanessa Stevenson</h3>
+                <p>food enthusiast, photogruphy fan . add a pinch of row foodism and that's pretty much how i am  </p>
+                <button>SHARE RECIPE</button>
+            </nav>
+        </section>
+    </main>
+    <footer>
+        <a><img src="image/small-logo.png" alt="small-logo"></a>
+       Delicious&copy;2013.All Rights Reserved.Proudly Puplished with Ghost 
+    </footer>
 
 </body>
 
