--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section id="head">
         <header>
             <nav>
-                <div>
+                <div id="div1">
                     <img id='logo' src="image/logo.png" alt="theLogo">
                 </div>
                 <div id="h">
