--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <nav>
                 <div id="div1">
                     <img id='logo' src="image/logo.png" alt="theLogo">
-                </div>
-                <div id="h">
-                    <h1>Delicious</h1>
-                    <h4>The Best Food Blog On THe Web</h4>
-                </div>
 
+
+                    <h1 style="margin-left: 50px;">Delicious</h1>
+                    <h6 style="margin-left: 50px;">The Best Food Blog On THe Web</h6>
+
+                </div>
                 <div id='links'>
                     <a href="#">
                         <img src="image/fb-icon.png" alt="fb">
@@ -73,65 +73,72 @@
             </div>
             <a> <img src="image/choco-pizza.png" alt="choco-pizza"></a>
             <article>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed saepe necessitatibus, aut porro
+                <p style="padding-top: 50px;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed saepe
+                    necessitatibus, aut porro
                     suscipit eum aliquid reprehenderit aspernatur voluptatem, numquam optio? Nesciunt veritatis
                     repellendus ipsum alias expedita optio earum tempora.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, voluptate! Et tenetur odit
+                <p style="padding-top: 50px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit,
+                    voluptate! Et tenetur odit
                     voluptatum accusamus dolorem, eveniet obcaecati! Nisi odio eaque distinctio illo maxime doloribus
                     consequatur magnam, cum consequuntur iste.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi perferendis ab dolore magnam odit eum,
+                <p style="padding-top: 50px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi perferendis
+                    ab dolore magnam odit eum,
                     et non neque quos labore temporibus accusamus laborum earum tenetur. Consequatur recusandae
                     dignissimos cumque voluptatem.</p>
             </article>
         </section>
         <section id="ingredeant">
-            <Section id="right">
+            <section id="both">
+                <Section id="right">
 
-                <form action="/action_page.php">
-                    <input type="checkbox" name="vehicle1">
-                    <label for="vehicle1">1 1/2 cups of milk</label><br>
-                    <input type="checkbox" name="vehicle2">
-                    <label for="vehicle2"> 1/2 cup mascarpone</label><br>
-                    <input type="checkbox" name="vehicle3">
-                    <label for="vehicle3">1/2 tsp pink salt</label><br>
-                    <input type="checkbox" name="vehicle3">
-                    <label for="vehicle3">1 lb black mission figs</label><br>
-                    <input type="checkbox" name="vehicle3">
-                    <label for="vehicle3">1/2 cup brown suger</label><br>
-                    <input type="checkbox" name="vehicle3">
-                    <label for="vehicle3">2-4 tbsp water</label><br>
-                </form>
-            </Section>
-            <Section id="left">
-                <form action="/action_page.php">
-                    <input type="checkbox" name="vehicle1">
-                    <label for="vehicle1"> </label><br>
-                    <input type="checkbox" name="vehicle2">
-                    <label for="vehicle2"> </label><br>
-                    <input type="checkbox" name="vehicle3">
-                    <label for="vehicle3"> </label><br>
-                    <input type="checkbox" name="vehicle3">
-                    <label for="vehicle3"> </label><br>
-                    <input type="checkbox" name="vehicle3">
-                    <label for="vehicle3"> </label><br>
-                    <input type="checkbox" name="vehicle3">
-                    <label for="vehicle3"> </label><br>
-                </form>
-            </Section>
-
+                    <form action="/action_page.php">
+                        <input type="checkbox" name="vehicle1">
+                        <label for="vehicle1">1 1/2 cups of milk</label><br>
+                        <input type="checkbox" name="vehicle2">
+                        <label for="vehicle2"> 1/2 cup mascarpone</label><br>
+                        <input type="checkbox" name="vehicle3">
+                        <label for="vehicle3">1/2 tsp pink salt</label><br>
+                        <input type="checkbox" name="vehicle3">
+                        <label for="vehicle3">1 lb black mission figs</label><br>
+                        <input type="checkbox" name="vehicle3">
+                        <label for="vehicle3">1/2 cup brown suger</label><br>
+                        <input type="checkbox" name="vehicle3">
+                        <label for="vehicle3">2-4 tbsp water</label><br>
+                    </form>
+                </Section>
+                <Section id="left">
+                    <form action="/action_page.php">
+                        <input type="checkbox" name="vehicle1">
+                        <label for="vehicle1">1 1/2 cups heavy cream </label><br>
+                        <input type="checkbox" name="vehicle2">
+                        <label for="vehicle2"> <del>1/3 granulated suger</del></label><br>
+                        <input type="checkbox" name="vehicle3">
+                        <label for="vehicle3"><del> 2 egg yolks</del> </label><br>
+                        <input type="checkbox" name="vehicle3">
+                        <label for="vehicle3"> 1 lemon,juiced</label><br>
+                        <input type="checkbox" name="vehicle3">
+                        <label for="vehicle3"> 2 tbsp butter</label><br>
+                        <input type="checkbox" name="vehicle3">
+                        <label for="vehicle3">1 cup honey roasted pecans, roughly chopped </label><br>
+                    </form>
+                </Section>
+            </section>
         </section>
         <section id="owner">
-            <a> <img src="image/van-pic.png" alt="van-pic"></a>
-            <nav>
+            
+            <div>
+                <a> <img src="image/van-pic.png" alt="van-pic"></a>
                 <h3>vanessa Stevenson</h3>
-                <p>food enthusiast, photogruphy fan . add a pinch of row foodism and that's pretty much how i am  </p>
+                <p>food enthusiast, photogruphy fan . add a pinch of row foodism and that's pretty much how i am </p>
                 <button>SHARE RECIPE</button>
-            </nav>
+            </div>
         </section>
     </main>
     <footer>
-        <a><img src="image/small-logo.png" alt="small-logo"></a>
-       Delicious&copy;2013.All Rights Reserved.Proudly Puplished with Ghost 
+        <legend><a><img src="image/small-logo.png" alt="small-logo"></a></legend>
+        
+        Delicious&copy;2013.All Rights Reserved.
+        <p>Proudly Puplished with Ghost</p>
     </footer>
 
 </body>
